--- a/favoris.html
+++ b/favoris.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favoris</title>
 </head>
 <body>
-    <p>Sabrina was here</p>
+    <h1>Favoris</h1>
+   <ul>
+    <li>
+    <p><img src="/Users/sabichou/Desktop/assoc_diet/association-diet/images/noix.png" alt="Image noix"/></p>
+    </li>
+    <li> <img src="/Users/sabichou/Desktop/assoc_diet/association-diet/images/nutella.png" alt="Image nutella"/></p>
+    </li></li>
+</ul>
 </body>
 </html>
